--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -1,4 +1,3 @@
-# -*- eval: (olivetti-mode) -*-
 #+title: Emacs Configuration
 #+author: Hristo Filaretov
 
@@ -8,15 +7,16 @@ Most of this is based on Harry Schwartz's [[https://github.com/hrs/dotfiles/blob
 I assume that =use-package= and =general= are always available and sprinkle their incantations
 generously throughout the configuration.
 
+I tried using =straight=, but I wound up having some trouble with =org-mode=, and altough I think it was documented somewhere, I'm more than happy with the regular =package=.
+
 * Packaging
 I use =use-package= for packaging my used packages.
 
 #+begin_src emacs-lisp
   (use-package use-package
     :config
-    (require 'use-package-ensure)
-    (setq use-package-always-ensure t)
-    (global-set-key [remap dabbrev-expand] 'hippie-expand))
+    (global-set-key [remap dabbrev-expand] 'hippie-expand)
+    (setq use-package-always-ensure t))
 #+end_src
 
 * Keybindings
@@ -24,25 +24,56 @@ I use =general= for my keybindings. It's generally quite good. The keybindings t
 sprinkled throughout this file.
 
 #+begin_src emacs-lisp
-  (use-package general
+  (use-package general)
+#+end_src
+
+* Compile
+
+#+begin_src emacs-lisp
+  (use-package compile
+    :ensure nil
     :config
     (general-def 'normal
-      "M-i" 'imenu
-      "C-s" 'save-buffer))
+      "C-x c" 'recompile))
+#+end_src
+
+* Files
+
+#+begin_src emacs-lisp
+  (use-package files
+    :ensure nil
+    :config (general-def 'normal "C-s" 'save-buffer))
+#+end_src
+
+* Imenu
+
+#+begin_src emacs-lisp
+  (use-package imenu
+    :ensure nil
+    :config
+    (general-def 'normal
+      "M-i" 'imenu))
+#+end_src
+
+* Flycheck
+
+#+begin_src emacs-lisp
+  (use-package flycheck)
 #+end_src
 
 * Common paths
 Building common paths.
 
 #+begin_src emacs-lisp
-  (setq my/journal-path "~/cloud/journal/")
+  (setq hgf-journal-path "~/cloud/journal/")
+
   (defun emacs.d (filename)
     "Return the file path of FILENAME relative to the Emacs directory."
     (format "%s%s" user-emacs-directory filename))
 
   (defun journal-path (filename)
     "Return the file path of FILENAME relative to the Journal directory."
-    (format "%s%s" my/journal-path filename))
+    (format "%s%s" hgf-journal-path filename))
 #+end_src
 
 * Macros
@@ -96,37 +127,44 @@ Just letting Emacs know who I am.
 	user-mail-address "h.filaretov@campus.tu-berlin.de")
 #+end_src
 
-* Fonts
+* Faces
 Depending on the operating system, there are a few options.
 
 #+begin_src emacs-lisp
-  (cond ((eq system-type 'windows-nt)
-	 (set-face-attribute 'default nil
-			     :family "Consolas"
-			     :height 110))
-	((eq system-type 'darwin)
-	 (set-face-attribute 'default nil
-			     :family "Source Code Pro"
-			     :height 120
-			     :weight 'semi-bold))
-	(t ;; t for true operating system
-	 (progn
-	   (set-face-attribute 'default nil
-			       :family "Iosevka Term"
-			       :height 100)
-	   (set-face-attribute 'fixed-pitch nil
-			       :family "Iosevka Term"
-			       :height 100)
-	   (set-face-attribute 'variable-pitch nil
-			       :family "Source Serif Pro"
-			       :height 110))))
+    (defun hgf--set-font ()
+      "Set a font depending on the OS."
+      (cond ((eq system-type 'windows-nt)
+	     (set-face-attribute 'default nil
+				 :family "Consolas"
+				 :height 110))
+	    ((eq system-type 'darwin)
+	     (set-face-attribute 'default nil
+				 :family "Source Code Pro"
+				 :height 120
+				 :weight 'semi-bold))
+	    (t ;; t for true operating system
+	     (progn
+	       (set-face-attribute 'default nil
+				   :family "Iosevka Term"
+				   :height 105)
+	       (set-face-attribute 'fixed-pitch nil
+				   :family "Iosevka Term"
+				   :height 105)
+	       (set-face-attribute 'variable-pitch nil
+				   :family "Source Serif Pro"
+				   :height 105)))))
+
+  (use-package faces
+    :ensure nil
+    :config
+    (hgf--set-font))
 #+end_src
 
 * Face modifications
 Some things aren't meant to be. Like variable sized fonts in my org files.
 
 #+begin_src emacs-lisp
-  (defun my/org-mode-hook ()
+  (defun hgf-org-mode-hook ()
     "Disable header variable font size."
     (progn
       (dolist (face '(org-level-1
@@ -138,9 +176,9 @@ Some things aren't meant to be. Like variable sized fonts in my org files.
 	(set-face-attribute face nil :weight 'normal :height 1.0)))
     (set-face-attribute 'org-block nil :foreground nil))
 
-  (add-hook 'org-mode-hook 'my/org-mode-hook)
+  (add-hook 'org-mode-hook 'hgf-org-mode-hook)
 
-  (defun my/outline-mode-hook ()
+  (defun hgf-outline-mode-hook ()
     "Disable header variable font size."
     (progn
       (dolist (face '(outline-1
@@ -154,6 +192,14 @@ Some things aren't meant to be. Like variable sized fonts in my org files.
 	(set-face-attribute face nil :weight 'semi-bold :height 1.0))))
 
 #+end_src
+
+* Diff-hl
+
+#+begin_src emacs-lisp
+  (use-package diff-hl
+    :config (global-diff-hl-mode +1))
+#+end_src
+
 
 * Modeline
 
@@ -171,15 +217,20 @@ Some things aren't meant to be. Like variable sized fonts in my org files.
    mode-line-format
    '(
      ""
+     ;; Buffer name
      "%b"
      "  "
+     ;; Modified cookie
      mode-line-modified
      "  "
+     ;; Major mode
      "%m"
      "  "
+     ;; VC Branch
      (:eval (when-let (vc vc-mode)
-		    (propertize (substring vc 5)
-				'face 'fixed-pitch)))))
+	      (propertize (substring vc 5)
+			  'face 'fixed-pitch)))
+     pyvenv-mode-line-indicator))
 #+end_src
 
 * Calendar
@@ -212,7 +263,9 @@ Vimmy keys and feel, for us vimfolk.
       "L" 'evil-end-of-line
       "H" 'evil-first-non-blank-of-visual-line
       "?" 'swiper
-      "C-u" 'evil-scroll-up)
+      "C-u" 'evil-scroll-up
+      "C-w 1" 'delete-other-windows
+      "C-w x" 'kill-this-buffer)
     (general-def 'insert
       "C-e" 'end-of-line
       "C-a" 'beginning-of-line
@@ -220,7 +273,6 @@ Vimmy keys and feel, for us vimfolk.
       "C-y" 'yank))
   (use-package evil-collection
     :after evil
-    :ensure t
     :config
     (evil-collection-init))
   (use-package evil-magit)
@@ -241,6 +293,31 @@ Vimmy keys and feel, for us vimfolk.
     (evil-org-agenda-set-keys))
 #+end_src
 
+* LSP & Completion
+
+#+begin_src emacs-lisp
+  (use-package company
+    :config (global-company-mode +1))
+#+end_src
+
+#+begin_src emacs-lisp
+  (setq lsp-keymap-prefix "C-c l")
+  (use-package lsp-mode
+    :hook ((lsp-mode . lsp-enable-which-key-integration))
+    :commands lsp
+    :config
+    (setq gc-cons-threshold 200000000
+	  read-process-output-max (* 1024 1024 10)
+	  lsp-completion-provider :capf))
+
+  (use-package lsp-ui
+    :commands lsp-ui-mode)
+
+  (use-package lsp-ivy
+    :commands lsp-ivy-workspace-symbol)
+
+#+end_src
+
 * Wrangle some defaults
 ** Pot pourri
 #+begin_src emacs-lisp
@@ -250,7 +327,7 @@ Vimmy keys and feel, for us vimfolk.
   (tool-bar-mode 0)
   (menu-bar-mode 0)
   (blink-cursor-mode 0)
-  (fringe-mode 0)
+  (fringe-mode '(nil . 0))
   (setq vc-follow-symlinks t
 	sentence-end-double-space nil
 	require-final-newline t
@@ -293,7 +370,7 @@ Great guy, that Harry Schwartz. Most of these functions are directly copied from
 ** Open file as =sudo=
 
 #+begin_src emacs-lisp
-  (defun hgf/find-file-as-sudo ()
+  (defun hgf-find-file-as-sudo ()
     (interactive)
     (let ((file-name (buffer-file-name)))
       (when file-name
@@ -303,52 +380,75 @@ Great guy, that Harry Schwartz. Most of these functions are directly copied from
 ** Generate random scratch buffer
 
 #+begin_src emacs-lisp
-  (defun hgf/generate-scratch-buffer ()
+  (defun hgf-generate-scratch-buffer ()
     "Create and switch to a temporary scratch buffer with a random
 	 name."
     (interactive)
     (switch-to-buffer (make-temp-name "scratch-")))
 #+end_src
 
-* Meta modes
-** Prog mode
-I like =hl-line-mode= but only when programming. It's quite annoying when writing prose.
-
-#+begin_src emacs-lisp
-  (add-hook 'prog-mode-hook 'hl-line-mode)
-#+end_src
-
-** Text mode
-I like =variable= pitch in my text files.
-
-#+begin_src emacs-lisp
-  (add-hook 'text-mode-hook 'variable-pitch-mode)
-#+end_src
-
-* Major modes
-** Markdown
-I use markdown for all kinds of stuff, mostly readmes, but also a variety of documents in
-conjunction with =pandoc=.
-
-#+begin_src emacs-lisp
-  (use-package markdown-mode
-    :mode (("README\\.md\\'" . markdown-mode)
-	   ("\\.md\\'" . markdown-mode)
-	   ("\\.markdown\\'" . markdown-mode)))
-#+end_src
-
-** Org
-Org is amazing and I use it all the time. And once again, a large majority of this section is
-inspired by Harry Schwartz.
+* Org
+Org is amazing and I use it all the time. And once again, a large majority of this section is inspired by Harry Schwartz.
 
 #+begin_src emacs-lisp
   (use-package org
     :config
-    (general-def 'normal
-      "g t" 'org-todo))
+    (general-def 'org-mode 'normal
+      "g t" 'org-todo
+      "z a" 'org-cycle))
 #+end_src
 
-*** Babel
+** GTD
+All about them tasks.
+
+#+begin_src emacs-lisp
+  (setq org-refile-use-outline-path 'file)
+  (setq org-clock-into-drawer nil)
+  (setq org-refile-targets `((,(journal-path "projects.org") :maxlevel . 2)
+			     (,(journal-path "someday.org") :level . 1)
+			     (,(journal-path "tickler.org") :level . 1)
+			     (,(journal-path "inbox.org") :level . 0)
+			     (,(journal-path "fraunhofer.org") :maxlevel . 3)))
+  (setq org-todo-keywords '((sequence "TODO(t)" "WAIT(w)" "|" "DONE(d)" "QUIT(q)")))
+  (setq org-agenda-files
+	'(
+	  "~/cloud/journal/projects.org"
+	  "~/cloud/journal/inbox.org"
+	  "~/cloud/journal/notes.org"
+	  "~/cloud/journal/fraunhofer.org"
+	  ))
+  (setq org-archive-location "~/cloud/journal/archive.org::* %s")
+  (setq org-capture-templates
+	'(("n" "Note" entry (file "~/cloud/journal/notes.org")
+	   "*  %?\n")
+	  ("i" "Inbox" entry (file "~/cloud/journal/inbox.org")
+	   "* TODO %?\n")))
+  (general-def
+    "C-c c" 'org-capture
+    "C-c a" 'org-agenda
+    "C-c t" (lambda () (interactive) (org-capture nil "t")))
+#+end_src
+
+Alright, this function isn't exactly the cleanest possible thing in the world, but it's useful enough for me (for now).
+
+#+begin_src emacs-lisp
+  (defun org-generate-report ()
+    (interactive)
+    (let ((header "|Task|Duration|"))
+      (insert (s-join "\n" (nconc `(,header) (org-element-map (org-element-parse-buffer) 'clock
+					       (lambda (clock)
+						 (let ((task (org-element-property :title (org-element-property :parent (org-element-property :parent clock))))
+						       (val  (org-element-property :duration clock)))
+						   (format "| %s | %s |" (car task) val)))))))))
+  (general-def 'normal "C-c C-x C-r" 'org-generate-report)
+#+end_src
+
+#+begin_src emacs-lisp
+  (general-add-advice 'org-clock-in :after 'hgf-activate-current-task)
+#+end_src
+
+
+** Babel
 
 #+begin_src emacs-lisp
   (add-to-list 'org-structure-template-alist
@@ -375,18 +475,18 @@ Ledger entries too, please
      (ruby . t)))
 #+end_src
 
-*** Cosmetics
-I prefer my org-files non-indented. I also like to see the leading stars (otherwise there's a weird
-gap when things aren't indented.
+** Cosmetics
+I prefer my org-files non-indented. I also like to see the leading stars (otherwise there's a weird gap when things aren't indented.
 
 #+begin_src emacs-lisp
-  (setq org-adapt-indentation nil
-	org-hide-leading-stars nil
-	org-cycle-separator-lines 0
-	org-hide-emphasis-markers t)
+    (setq org-adapt-indentation nil
+	  org-hide-leading-stars nil
+	  org-cycle-separator-lines 1
+	  org-hide-emphasis-markers t
+          org-fontify-done-headline nil)
 #+end_src
 
-*** Editing
+** Editing
 I often start new headings in the middle of editing a paragraph and I've never wanted to carry
 over the text after the point.
 
@@ -404,30 +504,7 @@ Quickly adding a link with the title from said link. Nifty.
       "C-x C-l" 'org-cliplink))
 #+end_src
 
-*** Todos and agendas
-All about them tasks.
-
-#+begin_src emacs-lisp
-  (setq org-agenda-files
-	'(
-	  "~/cloud/journal/tasks.org"
-	  "~/cloud/journal/inbox.org"
-	  "~/cloud/journal/notes.org"
-	  "~/cloud/journal/fraunhofer.org"
-	  ))
-  (setq org-archive-location "~/cloud/journal/archive.org::")
-  (setq org-capture-templates
-	'(("n" "Note" entry (file "~/cloud/journal/notes.org")
-	   "*  %?\n")
-	  ("i" "Inbox" entry (file "~/cloud/journal/inbox.org")
-	   "* TODO %?\n")))
-  (general-def
-    "C-c c" 'org-capture
-    "C-c a" 'org-agenda
-    "C-c t" (lambda () (interactive) (org-capture nil "t")))
-#+end_src
-
-*** References and citations
+** References and citations
 
 #+begin_src emacs-lisp
   (setq reftex-default-bibliography '("~/cloud/library.bib"))
@@ -435,7 +512,7 @@ All about them tasks.
 	'("~/cloud/library.bib"))
 #+end_src
 
-*** Ox and Latex
+** Ox and Latex
 I use org to write many of my latex files, including longer documents.
 
 #+begin_src emacs-lisp
@@ -460,23 +537,61 @@ I use org to write many of my latex files, including longer documents.
 		   ("\\subsection{%s}" . "")
 		   ("\\subsubsection{%s}" . ""))))
   (use-package ox-extra
-    :commands ox-extras-activate
     :ensure org-plus-contrib
+    :commands ox-extras-activate
     :config
     (ox-extras-activate '(ignore-headlines)))
+#+end_src
+
+* Major modes
+** Python
+#+begin_src emacs-lisp
+  (use-package lsp-pyright
+    :hook (python-mode . (lambda ()
+			   (require 'lsp-pyright)
+			   (lsp)))
+    :config
+    (setq flycheck-python-flake8-executable "flake8"))
+  (use-package blacken)
+  (use-package python-docstring)
+  (use-package pytest)
+  (use-package pyvenv
+    :config
+    (setenv "WORKON_HOME" "~/.cache/pypoetry/virtualenvs")
+    (setq pyvenv-mode-line-indicator
+	  '(pyvenv-virtual-env-name ("[venv:" pyvenv-virtual-env-name "] "))))
+#+end_src
+
+Emacs IPython Notebooks
+
+#+begin_src emacs-lisp
+(use-package ein)
+#+end_src
+
+** Markdown
+I use markdown for all kinds of stuff, mostly readmes, but also a variety of documents in
+conjunction with =pandoc=.
+
+#+begin_src emacs-lisp
+  (use-package markdown-mode
+    :mode (("README\\.md\\'" . markdown-mode)
+	   ("\\.md\\'" . markdown-mode)
+	   ("\\.markdown\\'" . markdown-mode)))
 #+end_src
 
 ** Ledger
 Trackin' them finances.
 
 #+begin_src emacs-lisp
-  (use-package ledger-mode)
+  (use-package ledger-mode
+    :config
+    (add-to-list 'ledger-reports '("diet" "%(binary) -f %(ledger-file) reg --value Assets --budget --daily"))
+    (add-to-list 'ledger-reports '("work" "%(binary) -f %(ledger-file) bal --add-budget")))
 #+end_src
 
 ** TeX
 #+begin_src emacs-lisp
 (use-package tex
-:ensure nil
 :config
 (setq TeX-auto-save t)
 (setq TeX-parse-self t)
@@ -488,12 +603,12 @@ Trackin' them finances.
 (auctex-latexmk-setup)
 (setq auctex-latexmk-inherit-TeX-PDF-mode t))
 
-(defun my/bibtex-hook ()
+(defun hgf-bibtex-hook ()
 "My bibtex hook."
 (progn
 (setq comment-start "%")))
 
-(add-hook 'bibtex-mode-hook 'my/bibtex-hook)
+(add-hook 'bibtex-mode-hook 'hgf-bibtex-hook)
 
 (setq-default TeX-auto-save t
 TeX-parse-self t
@@ -516,7 +631,9 @@ Vterm is the nicest terminal emulator for Emacs I've found so far. But it needs 
     :config
     (setq vterm-shell "/usr/bin/fish"
 	  vterm-kill-buffer-on-exit t
-	  vterm-copy-exclude-prompt t))
+	  vterm-copy-exclude-prompt t)
+    (general-def 'normal
+      "<f4>" 'vterm))
 #+end_src
 
 And some nice packages to go with that.
@@ -527,8 +644,238 @@ And some nice packages to go with that.
     (general-def "C-c t" 'vterm-toggle-cd))
 #+end_src
 
+** Elixir
+
+#+begin_src emacs-lisp
+  (use-package elixir-mode)
+  (use-package alchemist)
+#+end_src
+
+** Lua
+
+#+begin_src emacs-lisp
+  (use-package lua-mode)
+#+end_src
+
+** RISCV
+
+#+begin_src emacs-lisp
+  (use-package riscv-mode)
+#+end_src
+
+** Rust
+#+begin_src emacs-lisp
+  (use-package rust-mode
+    :config
+    (setq lsp-rust-server 'rust-analyzer))
+#+end_src
+
 * Minor modes
-** Hydra
+** Which key
+For exploring new keys and remembering the lesser used ones.
+
+#+begin_src emacs-lisp
+  (use-package which-key
+    :config
+    (which-key-mode))
+#+end_src
+
+** Olivetti
+Centering text when writing prose.
+
+#+begin_src emacs-lisp
+  (use-package olivetti
+    :config
+    (setq-default olivetti-body-width 120)
+    (add-hook 'org-mode-hook 'olivetti-mode))
+#+end_src
+
+** Outshine
+#+begin_src emacs-lisp
+  (use-package outshine
+    :config
+    (setq outshine-startup-folded-p t)
+    (add-hook 'conf-mode-hook #'outshine-mode 1)
+    (add-hook 'prog-mode-hook #'outshine-mode 1)
+    (add-hook 'bibtex-mode-hook #'outshine-mode 1)
+    (add-hook 'LaTeX-mode-hook #'outshine-mode 1))
+#+end_src
+
+** Engine-mode
+=hrs= strikes again.
+
+#+begin_src emacs-lisp
+  (use-package engine-mode
+    :config
+    (engine-mode 1)
+    (defengine wikipedia
+      "http://www.wikipedia.org/search-redirect.php?language=en&go=Go&search=%s"
+      :keybinding "w"
+      :docstring "Searchin' the wikis."))
+#+end_src
+
+
+* Magit
+#+begin_src emacs-lisp
+  (use-package magit
+    :config
+    (general-def "C-c d" 'magit-list-repositories))
+#+end_src
+
+** Repolist
+I like Magit's repolist feature, but I prefer to build the repolist dynamically.
+
+#+begin_src emacs-lisp
+  (defun hgf-list-subdirs (dir)
+    "List all subdirs, not recursive, absolute names, DIR shouldn't have a / at the end."
+    (let ((base dir)
+	  (result))
+      (dolist (f (directory-files base) result)
+	(let ((name (concat base "/" f)))
+	  (when (and (file-directory-p name)
+		     (not (equal f ".."))
+		     (not (equal f ".")))
+	    (add-to-list 'result name))))
+      result))
+
+  (defun hgf-contains-git-repo-p (dir)
+    "Check if there's  a .git directory in DIR."
+    (let ((dirs (directory-files dir)))
+      (member ".git" dirs)))
+
+
+  (defun hgf-filter-git-repos (dirs)
+    "Remove all directories without a .git subdirectory in DIRS."
+    (let ((result))
+      (dolist (dir dirs result)
+	(when (hgf-contains-git-repo-p dir)
+	  (add-to-list 'result dir)))
+      result))
+
+  (defun hgf-make-magit-repolist (dirs)
+    "Make a list of the form (dir 0) for the magit-list-repositories function from DIRS."
+    (let ((result))
+      (dolist (dir dirs result)
+	(add-to-list 'result `(,dir 0)))
+      result))
+
+  (defun hgf-repolist-refresh ()
+    "Hi."
+    (setq magit-repository-directories
+	  (~> "~/dev"
+	      (hgf-list-subdirs)
+	      (hgf-filter-git-repos)
+	      (hgf-make-magit-repolist))))
+
+  (advice-add 'magit-list-repositories :before #'hgf-repolist-refresh)
+
+  (setq magit-repolist-columns
+	'(("Name" 12 magit-repolist-column-ident nil)
+	  ("Branch" 10 magit-repolist-column-branch nil)
+	  ("Dirty" 6 magit-repolist-column-dirty nil)
+	  ("B<U" 3 magit-repolist-column-unpulled-from-upstream
+	   ((:right-align t)
+	    (:help-echo "Upstream changes not in branch")))
+	  ("B>U" 3 magit-repolist-column-unpushed-to-upstream
+	   ((:right-align t)
+	    (:help-echo "Local changes not in upstream")))
+	  ("Version" 30 magit-repolist-column-version nil)
+	  ("Path" 99 magit-repolist-column-path nil)))
+#+end_src
+
+* Neotree
+
+#+begin_src emacs-lisp
+  (use-package neotree
+    :config
+    (general-def "<f2>" 'neotree-toggle)
+    (setq neo-theme 'arrow))
+#+end_src
+
+* Ivy
+
+#+begin_src emacs-lisp
+  (use-package ivy
+    :config
+    (ivy-mode 1)
+    (setq ivy-use-virtual-buffers t
+	  enable-recursive-minibuffers t
+	  ivy-initial-inputs-alist nil
+	  count-format "(%d/%d) "))
+
+  (use-package counsel
+    :config
+    (counsel-mode 1)
+    (use-package flx)
+    (use-package smex))
+
+  (use-package ivy-rich
+    :config
+    (ivy-rich-mode 1))
+
+#+end_src
+
+** =ivy-bibtex=
+
+#+begin_src emacs-lisp
+  (use-package ivy-bibtex
+    :config
+    (setq ivy-re-builders-alist
+	  '((ivy-bibtex . ivy--regex-ignore-order)
+	    (t . ivy--regex-plus)))
+    (setq ivy-bibtex-default-action 'ivy-bibtex-insert-citation)
+    (setq bibtex-completion-cite-default-command "autocite"
+	  bibtex-completion-cite-prompt-for-optional-arguments nil
+	  bibtex-completion-pdf-field "file")
+    (setq bibtex-completion-pdf-open-function
+	  (lambda (fpath)
+	    (call-process "zathura" nil 0 nil fpath)))
+    (general-def "C-x [" 'ivy-bibtex))
+#+end_src
+
+* Projectile
+
+#+begin_src emacs-lisp
+  (use-package projectile
+    :config
+    (projectile-mode +1)
+    (general-def 'normal
+      "M-p" 'projectile-command-map
+      "C-p" 'projectile-find-file)
+    (setq projectile-completion-system 'ivy)
+    (setq projectile-project-search-path '("~/dev" "~/dev/fraunhofer")))
+#+end_src
+
+Some additional utilities I mostly use with Projectile:
+#+begin_src emacs-lisp
+  (use-package ripgrep)
+#+end_src
+
+* Yasnippet
+
+#+begin_src emacs-lisp
+  (use-package yasnippet)
+  (setq yas-snippet-dirs '("~/.emacs.d/snippets")
+	yas-indent-line 'fixed)
+  (yas-global-mode 1)
+#+end_src
+
+* Helpful
+
+#+begin_src emacs-lisp
+  (use-package helpful
+    :config
+    (general-def
+      "C-h k" 'helpful-key
+      "C-h F" 'helpful-function
+      "C-h C" 'helpful-command
+      "C-c C-d" 'helpful-at-point)
+    (setq counsel-describe-function-function 'helpful-callable
+	  counsel-describe-variable-function 'helpful-variable))
+#+end_src
+
+
+* Hydra
 I'm not really using Hydra properly, except for the window management stuff that I seldom need to
 use.
 
@@ -556,13 +903,29 @@ use.
     (defhydra hydra-files (:exit t)
       "Frequent files"
       ("e" (find-file (emacs.d "configuration.org")) "config")
+      ("i" (find-file (journal-path "inbox.org")) "inbox")
+      ("p" (counsel-find-file "~/cloud/journal/projects") "projects")
+      ("f" (hydra-work/body) "fraunhofer")
       ("n" (find-file (journal-path "notes.org")) "notes")
-      ("u" (find-file (journal-path "uni.org")) "uni")
       ("w" (find-file (journal-path "wiki.org")) "wiki")
-      ("t" (find-file (journal-path "tasks.org")) "tasks")
-      ("f" (find-file (journal-path "fraunhofer.org")) "fraunhofer")
-      ("c" (find-file (journal-path "calendar.org")) "calendar")
-      ("s" (hgf/generate-scratch-buffer) "scratch"))
+      ("c" (hydra-configs/body) "configs")
+      ("d" (find-file (journal-path "diet/diet.ledger")) "diet")
+      ("D" (find-file (journal-path "diet/food.ledger")) "food")
+      ("s" (hgf-generate-scratch-buffer) "scratch"))
+    (defhydra hydra-configs (:exit t)
+      "Configuration files"
+      ("i" (find-file "~/.config/i3/config") "i3")
+      ("g" (find-file "~/.config/git") "git")
+      ("k" (find-file "~/.config/kitty/kitty.conf") "kitty")
+      ("r" (find-file "~/.config/ranger/rc.conf") "ranger")
+      ("R" (find-file "~/.config/rofi/config") "Rofi")
+      ("e" (find-file (emacs.d "configuration.org")) "emacs")
+      ("f" (find-file "~/.config/fish/config.fish") "fish"))
+    (defhydra hydra-work (:exit t)
+      "Configuration files"
+      ("n" (find-file (journal-path "fraunhofer/notes.org")) "notes")
+      ("t" (find-file (journal-path "fraunhofer/working_hours.ledger")) "working hours")
+      ("p" (counsel-find-file (journal-path "fraunhofer/projects")) "projects"))
     (defhydra hydra-package (:exit t)
       "Package management"
       ("r" (package-refresh-contents) "refresh")
@@ -571,171 +934,12 @@ use.
       ("d" (call-interactively #'package-delete) "delete"))
     (general-def
       "C-c s" 'hydra-shell/body
+      "C-c P" 'hydra-package/body
       "C-c f" 'hydra-files/body
-      "C-c p" 'hydra-package/body
-      "C-c w" 'hydra-window/body))
+      "C-c w" 'hydra-window/body)
+    (general-def 'normal
+      "C-e" 'hydra-files/body))
 #+end_src
-
-** Which key
-For exploring new keys and remembering the lesser used ones.
-
-#+begin_src emacs-lisp
-  (use-package which-key
-    :config
-    (which-key-mode))
-#+end_src
-
-** Olivetti
-Centering text when writing prose.
-
-#+begin_src emacs-lisp
-  (use-package olivetti
-    :config
-    (setq-default olivetti-body-width 120))
-#+end_src
-
-** Ivy
-
-#+begin_src emacs-lisp
-  (use-package ivy
-    :config
-    (ivy-mode 1)
-    (setq ivy-use-virtual-buffers t
-	  enable-recursive-minibuffers t
-	  ivy-initial-inputs-alist nil
-	  count-format "(%d/%d) "))
-
-  (use-package counsel
-    :config
-    (counsel-mode 1)
-    (use-package flx)
-    (use-package smex))
-
-  (use-package ivy-rich
-    :config
-    (ivy-rich-mode 1))
-
-#+end_src
-
-*** =ivy-bibtex=
-
-#+begin_src emacs-lisp
-  (use-package ivy-bibtex
-    :config
-    (setq ivy-re-builders-alist
-	  '((ivy-bibtex . ivy--regex-ignore-order)
-	    (t . ivy--regex-plus)))
-    (setq ivy-bibtex-default-action 'ivy-bibtex-insert-citation)
-    (setq bibtex-completion-cite-default-command "autocite"
-	  bibtex-completion-cite-prompt-for-optional-arguments nil
-	  bibtex-completion-pdf-field "file")
-    (setq bibtex-completion-pdf-open-function
-	  (lambda (fpath)
-	    (call-process "zathura" nil 0 nil fpath)))
-    (general-def "C-x [" 'ivy-bibtex))
-#+end_src
-
-** Outshine
-#+begin_src emacs-lisp
-  (use-package outshine
-    :config
-    (setq outshine-startup-folded-p t)
-    (add-hook 'conf-mode-hook #'outshine-mode 1)
-    (add-hook 'prog-mode-hook #'outshine-mode 1)
-    (add-hook 'bibtex-mode-hook #'outshine-mode 1)
-    (add-hook 'LaTeX-mode-hook #'outshine-mode 1))
-#+end_src
-
-** Engine-mode
-=hrs= strikes again.
-
-#+begin_src emacs-lisp
-  (use-package engine-mode
-    :config
-    (engine-mode 1)
-    (defengine wikipedia
-      "http://www.wikipedia.org/search-redirect.php?language=en&go=Go&search=%s"
-      :keybinding "w"
-      :docstring "Searchin' the wikis."))
-#+end_src
-
-** Magit
-#+begin_src emacs-lisp
-  (use-package magit
-    :config
-    (general-def "C-c d" 'magit-list-repositories))
-#+end_src
-
-*** Repolist
-I like Magit's repolist feature, but I prefer to build the repolist dynamically.
-
-#+begin_src emacs-lisp
-  (defun my/list-subdirs (dir)
-    "List all subdirs, not recursive, absolute names, DIR shouldn't have a / at the end."
-    (let ((base dir)
-	  (result))
-      (dolist (f (directory-files base) result)
-	(let ((name (concat base "/" f)))
-	  (when (and (file-directory-p name)
-		     (not (equal f ".."))
-		     (not (equal f ".")))
-	    (add-to-list 'result name))))
-      result))
-
-  (defun my/contains-git-repo-p (dir)
-    "Check if there's  a .git directory in DIR."
-    (let ((dirs (directory-files dir)))
-      (member ".git" dirs)))
-
-
-  (defun my/filter-git-repos (dirs)
-    "Remove all directories without a .git subdirectory in DIRS."
-    (let ((result))
-      (dolist (dir dirs result)
-	(when (my/contains-git-repo-p dir)
-	  (add-to-list 'result dir)))
-      result))
-
-  (defun my/make-magit-repolist (dirs)
-    "Make a list of the form (dir 0) for the magit-list-repositories function from DIRS."
-    (let ((result))
-      (dolist (dir dirs result)
-	(add-to-list 'result `(,dir 0)))
-      result))
-
-  (defun my/repolist-refresh ()
-    "Hi."
-    (setq magit-repository-directories
-	  (~> "~/dev"
-	      (my/list-subdirs)
-	      (my/filter-git-repos)
-	      (my/make-magit-repolist))))
-
-  (advice-add 'magit-list-repositories :before #'my/repolist-refresh)
-
-  (setq magit-repolist-columns
-	'(("Name" 12 magit-repolist-column-ident nil)
-	  ("Branch" 10 magit-repolist-column-branch nil)
-	  ("Dirty" 6 magit-repolist-column-dirty nil)
-	  ("B<U" 3 magit-repolist-column-unpulled-from-upstream
-	   ((:right-align t)
-	    (:help-echo "Upstream changes not in branch")))
-	  ("B>U" 3 magit-repolist-column-unpushed-to-upstream
-	   ((:right-align t)
-	    (:help-echo "Local changes not in upstream")))
-	  ("Version" 30 magit-repolist-column-version nil)
-	  ("Path" 99 magit-repolist-column-path nil)))
-#+end_src
-
-** TODO Yasnippet
-
-#+begin_src emacs-lisp
-  (use-package yasnippet)
-  (setq yas-snippet-dirs '("~/.emacs.d/snippets")
-	yas-indent-line 'fixed)
-  (yas-global-mode 1)
-#+end_src
-
 
 * Custom file
 
@@ -746,6 +950,7 @@ I like Magit's repolist feature, but I prefer to build the repolist dynamically.
 
 * Theme
 I am partial to Nord.
+
 #+begin_src emacs-lisp
   (use-package nord-theme)
 #+end_src
@@ -758,7 +963,20 @@ For setting transparency. I don't really use it, but it's there if I want to.
     (set-frame-parameter (selected-frame) 'alpha value))
 #+end_src
 
+** Some goodies
+
+#+begin_src emacs-lisp
+  (use-package all-the-icons)
+#+end_src
+
 ** Set theme
+
+Add some custom themes to the mix and make sure =rainbow-mode= is available.
+
+#+begin_src emacs-lisp
+  (add-to-list 'custom-theme-load-path (emacs.d "themes/"))
+  (use-package rainbow-mode)
+#+end_src
 
 #+begin_src emacs-lisp
   (defun hgf-disable-all-themes ()
@@ -796,8 +1014,9 @@ For setting transparency. I don't really use it, but it's there if I want to.
       (set-face-attribute  'org-level-7                nil  :weight 'normal :height 1.0)
       (set-face-attribute  'org-level-8                nil  :weight 'normal :height 1.0)
       (set-face-attribute  'font-lock-comment-face     nil  :inherit 'fixed-pitch)
-      (set-face-attribute  'mode-line                  nil  :background nil :overline t)
-      (set-face-attribute  'mode-line-inactive         nil  :background nil :overline nil)
+      (set-face-attribute  'neo-file-link-face         nil  :height 100)
+					  ;(set-face-attribute  'mode-line                  nil  :background nil :overline nil :underline t)
+					  ;(set-face-attribute  'mode-line-inactive         nil  :background nil :overline nil :underline t)
       ))
   (hgf-load-theme 'nord)
 #+end_src
@@ -805,9 +1024,9 @@ For setting transparency. I don't really use it, but it's there if I want to.
 * Triage
 
 #+begin_src emacs-lisp
-  (defun my/switch-to-previous-buffer ()
+  (defun hgf-switch-to-previous-buffer ()
     "Switch to previously open buffer.
-    Repeated invocations toggle between the two most recently open buffers."
+      Repeated invocations toggle between the two most recently open buffers."
     (interactive)
     (switch-to-buffer (other-buffer (current-buffer) 1)))
 
@@ -817,7 +1036,7 @@ For setting transparency. I don't really use it, but it's there if I want to.
     (let ((filename (buffer-file-name)))
       (and filename (file-exists-p filename))))
 
-  (defun my/delete-this-file ()
+  (defun hgf-delete-this-file ()
     "Remove file connected to current buffer and kill buffer."
     (interactive)
     (let ((filename (buffer-file-name))
@@ -831,7 +1050,7 @@ For setting transparency. I don't really use it, but it's there if I want to.
 	  (message "File %s successfully removed" filename)))))
 
   ;; ** Rename file
-  (defun my/rename-this-file ()
+  (defun hgf-rename-this-file ()
     "Rename current buffer and associated file."
     (interactive)
     (let ((name (buffer-name))
@@ -856,7 +1075,7 @@ For setting transparency. I don't really use it, but it's there if I want to.
 
 
   ;; ** Activate current task
-  (defun my/activate-current-task ()
+  (defun hgf-activate-current-task ()
     "Activate task under cursor."
     (interactive)
     (progn
@@ -869,7 +1088,34 @@ For setting transparency. I don't really use it, but it's there if I want to.
 			 " → "
 			 task) nil "~/.current_task")))))
 
-  (general-def "C-c h" 'my/activate-current-task)
+  (general-def "C-c h" 'hgf-activate-current-task)
 
+  (defun org-export-file-to-file (infile outfile backend)
+    (write-region (org-export-string-as
+		   (with-temp-buffer
+		     (insert-file-contents infile)
+		     (buffer-string))
+		   backend)
+		  nil
+		  outfile))
+(add-hook 'compilation-finish-functions
+  (lambda (buf str)
+    (if (null (string-match ".*exited abnormally.*" str))
+        ;;no errors, make the compilation window go away in a few seconds
+        (progn
+          (run-at-time
+           "1 sec" nil 'kill-buffer
+           (get-buffer-create "*compilation*"))
+          (message "No Compilation Errors!")))))
 #+end_src
+
+* Meta modes
+** Prog mode
+I like =hl-line-mode= but only when programming. It's quite annoying when writing prose.
+
+#+begin_src emacs-lisp
+  (add-hook 'prog-mode-hook 'hl-line-mode)
+  (add-hook 'prog-mode-hook 'outshine-mode)
+#+end_src
+
 
